--- a/package.json
+++ b/package.json
@@ -7,12 +7,14 @@
     "mongoose": "^7.0.3"
   },
   "devDependencies": {
+    "cross-env": "^7.0.3",
     "eslint": "^8.36.0",
     "husky": "^8.0.3",
     "jest": "^29.5.0",
     "supertest": "^6.3.3"
   },
   "scripts": {
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "test": "cross-env NODE_ENV=test jest"
   }
 }
