--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "supertest": "^6.3.3"
   },
   "scripts": {
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "test": "jest"
   }
 }
